--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </script>
     
 <head>
-  <title>Global</title>
+  <title>Asterism</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -26,7 +26,7 @@
 <div class="device-notification">
   <a class="device-notification--logo" href="#0">
     <img src="assets/img/logo.png" alt="Global">
-    <p>ScrewMC</p>
+    <p>Asterism</p>
   </a>
   <p class="device-notification--message">来点 不一样的.</p>
 </div>
@@ -38,7 +38,7 @@
         <header class="header">
           <a class="header--logo" href="#0">
             <img src="assets/img/logo.png" alt="Global">
-            <p>ScrewMC</p>
+            <p>Asterism</p>
           </a>
           <button class="header--cta cta">联系我们</button>
           <div class="header--nav-toggle">
